<?xml version="1.0"?>
<package>
  <name>hakuto</name>
  <version>0.1.8</version>
  <description>ROS package suite for the lunar rovers at Hakuto project, a Google Lunar XPRIZE contender.</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>
  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>

  <url type="website">http://wiki.ros.org/hakuto</url>
  <url type="repository">https://github.com/tork-a/hakuto</url>
  <url type="bugtracker">https://github.com/tork-a/hakuto/issues/</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tetris_description</run_depend>
  <run_depend>tetris_gazebo</run_depend>
  <run_depend>tetris_launch</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>
  </export>
</package>