<?xml version="1.0"?>
<package>
  <name>tetris_description</name>
  <version>0.0.1</version>
  <description>This package holds 3D models of the hakuto robots in COLLADA and URDF formats.</description>

  <maintainer email="iiysaito@opensource-robotics.tokyo.jp">Isaac I.Y. Saito</maintainer>

  <license>BSD</license>

  <author email="540o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf_tutorial</run_depend>

  <export>
  </export>

</package>
