<?xml version="1.0"?>
<package>
  <name>tetris_description</name>
  <version>0.1.8</version>
  <description>This package holds 3D models of the hakuto robots in COLLADA and URDF formats.</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>
  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>
  <url type="website">http://wiki.ros.org/tetris_description</url>
  <url type="repository">https://github.com/tork-a/hakuto</url>
  <url type="bugtracker">https://github.com/tork-a/hakuto/issues/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf_tutorial</run_depend>

  <export>
  </export>

</package>
