<?xml version="1.0"?>
<package>
  <name>tetris_launch</name>
  <version>0.1.1</version>
  <description>Launch files (batch files that start processes and set parameters) for hakuto robots.</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>
  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>
  <url type="website">http://wiki.ros.org/tetris_launch</url>
  <url type="repository">https://github.com/tork-a/hakuto</url>
  <url type="bugtracker">https://github.com/tork-a/hakuto/issues/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>tetris_gazebo</run_depend>

  <export>
  </export>

</package>
